--- a/server/upload_checklist.ipynb
+++ b/server/upload_checklist.ipynb
@@ -101,107 +101,104 @@
     {
      "data": {
       "text/plain": [
-       "{'Home Style': [<AnswerOption: AnswerOption object (1)>,\n",
-       "  <AnswerOption: AnswerOption object (2)>,\n",
-       "  <AnswerOption: AnswerOption object (3)>,\n",
-       "  <AnswerOption: AnswerOption object (4)>,\n",
-       "  <AnswerOption: AnswerOption object (5)>],\n",
-       " 'Roof Material': [<AnswerOption: AnswerOption object (6)>,\n",
-       "  <AnswerOption: AnswerOption object (7)>,\n",
-       "  <AnswerOption: AnswerOption object (8)>,\n",
-       "  <AnswerOption: AnswerOption object (9)>,\n",
-       "  <AnswerOption: AnswerOption object (10)>,\n",
-       "  <AnswerOption: AnswerOption object (11)>,\n",
-       "  <AnswerOption: AnswerOption object (12)>,\n",
-       "  <AnswerOption: AnswerOption object (13)>,\n",
-       "  <AnswerOption: AnswerOption object (14)>,\n",
-       "  <AnswerOption: AnswerOption object (15)>,\n",
-       "  <AnswerOption: AnswerOption object (16)>,\n",
-       "  <AnswerOption: AnswerOption object (17)>,\n",
-       "  <AnswerOption: AnswerOption object (18)>,\n",
-       "  <AnswerOption: AnswerOption object (19)>,\n",
-       "  <AnswerOption: AnswerOption object (20)>,\n",
-       "  <AnswerOption: AnswerOption object (21)>,\n",
-       "  <AnswerOption: AnswerOption object (22)>,\n",
-       "  <AnswerOption: AnswerOption object (23)>],\n",
-       " 'Panel Manufacturer': [<AnswerOption: AnswerOption object (24)>,\n",
-       "  <AnswerOption: AnswerOption object (25)>,\n",
-       "  <AnswerOption: AnswerOption object (26)>,\n",
-       "  <AnswerOption: AnswerOption object (27)>,\n",
-       "  <AnswerOption: AnswerOption object (28)>,\n",
-       "  <AnswerOption: AnswerOption object (29)>,\n",
-       "  <AnswerOption: AnswerOption object (30)>,\n",
-       "  <AnswerOption: AnswerOption object (31)>,\n",
-       "  <AnswerOption: AnswerOption object (32)>],\n",
-       " 'Main Breaker Rating': [<AnswerOption: AnswerOption object (33)>,\n",
-       "  <AnswerOption: AnswerOption object (34)>,\n",
-       "  <AnswerOption: AnswerOption object (35)>,\n",
-       "  <AnswerOption: AnswerOption object (36)>,\n",
-       "  <AnswerOption: AnswerOption object (37)>,\n",
-       "  <AnswerOption: AnswerOption object (38)>,\n",
-       "  <AnswerOption: AnswerOption object (39)>,\n",
-       "  <AnswerOption: AnswerOption object (40)>,\n",
-       "  <AnswerOption: AnswerOption object (41)>,\n",
-       "  <AnswerOption: AnswerOption object (42)>,\n",
-       "  <AnswerOption: AnswerOption object (43)>],\n",
-       " 'Bus Rating': [<AnswerOption: AnswerOption object (44)>,\n",
-       "  <AnswerOption: AnswerOption object (45)>,\n",
-       "  <AnswerOption: AnswerOption object (46)>,\n",
-       "  <AnswerOption: AnswerOption object (47)>,\n",
-       "  <AnswerOption: AnswerOption object (48)>,\n",
-       "  <AnswerOption: AnswerOption object (49)>,\n",
-       "  <AnswerOption: AnswerOption object (50)>,\n",
-       "  <AnswerOption: AnswerOption object (51)>,\n",
-       "  <AnswerOption: AnswerOption object (52)>],\n",
-       " 'Roof Pitch (Degrees)': [<AnswerOption: AnswerOption object (53)>,\n",
-       "  <AnswerOption: AnswerOption object (54)>,\n",
-       "  <AnswerOption: AnswerOption object (55)>,\n",
-       "  <AnswerOption: AnswerOption object (56)>,\n",
-       "  <AnswerOption: AnswerOption object (57)>,\n",
-       "  <AnswerOption: AnswerOption object (58)>,\n",
-       "  <AnswerOption: AnswerOption object (59)>,\n",
-       "  <AnswerOption: AnswerOption object (60)>,\n",
-       "  <AnswerOption: AnswerOption object (61)>,\n",
-       "  <AnswerOption: AnswerOption object (62)>,\n",
-       "  <AnswerOption: AnswerOption object (63)>,\n",
-       "  <AnswerOption: AnswerOption object (64)>,\n",
-       "  <AnswerOption: AnswerOption object (65)>,\n",
-       "  <AnswerOption: AnswerOption object (66)>],\n",
-       " 'Battery Capacity Types': [<AnswerOption: AnswerOption object (67)>,\n",
-       "  <AnswerOption: AnswerOption object (68)>,\n",
-       "  <AnswerOption: AnswerOption object (69)>],\n",
-       " 'DC Wire Run/Panel Ready Info': [<AnswerOption: AnswerOption object (70)>,\n",
-       "  <AnswerOption: AnswerOption object (71)>,\n",
-       "  <AnswerOption: AnswerOption object (72)>,\n",
-       "  <AnswerOption: AnswerOption object (73)>],\n",
-       " 'All Modules Landed Info list': [<AnswerOption: AnswerOption object (74)>,\n",
-       "  <AnswerOption: AnswerOption object (75)>,\n",
-       "  <AnswerOption: AnswerOption object (76)>,\n",
-       "  <AnswerOption: AnswerOption object (77)>],\n",
-       " 'Ground Rods Installed list': [<AnswerOption: AnswerOption object (78)>],\n",
-       " 'Electrical Equipment Hung L': [<AnswerOption: AnswerOption object (79)>,\n",
-       "  <AnswerOption: AnswerOption object (80)>,\n",
-       "  <AnswerOption: AnswerOption object (81)>],\n",
-       " 'AC Wire Run Complete List': [<AnswerOption: AnswerOption object (82)>,\n",
-       "  <AnswerOption: AnswerOption object (83)>,\n",
-       "  <AnswerOption: AnswerOption object (84)>],\n",
-       " 'DC Wire Run to Roof J-Box List': [<AnswerOption: AnswerOption object (85)>,\n",
-       "  <AnswerOption: AnswerOption object (86)>,\n",
-       "  <AnswerOption: AnswerOption object (87)>],\n",
-       " 'All Labels Placed List': [<AnswerOption: AnswerOption object (88)>,\n",
-       "  <AnswerOption: AnswerOption object (89)>],\n",
-       " 'All Strings Working List': [<AnswerOption: AnswerOption object (90)>,\n",
-       "  <AnswerOption: AnswerOption object (91)>],\n",
-       " 'Monitoring Set Up Tested List': [<AnswerOption: AnswerOption object (92)>,\n",
-       "  <AnswerOption: AnswerOption object (93)>],\n",
-       " 'Yes / No': [<AnswerOption: AnswerOption object (94)>,\n",
-       "  <AnswerOption: AnswerOption object (95)>],\n",
-       " 'Yes/No/NA': [<AnswerOption: AnswerOption object (96)>,\n",
-       "  <AnswerOption: AnswerOption object (97)>,\n",
-       "  <AnswerOption: AnswerOption object (98)>],\n",
-       " 'Yes / No / Unknown': [<AnswerOption: AnswerOption object (99)>,\n",
-       "  <AnswerOption: AnswerOption object (100)>,\n",
-       "  <AnswerOption: AnswerOption object (101)>]}"
+       "{'Home Style': [<AnswerOption: Single>,\n",
+       "  <AnswerOption: 2 Story>,\n",
+       "  <AnswerOption: 3 Story>,\n",
+       "  <AnswerOption: Mobile>,\n",
+       "  <AnswerOption: Condo/Townhome>],\n",
+       " 'Roof Material': [<AnswerOption: Cemented-Down Tile>,\n",
+       "  <AnswerOption: Clay tile>,\n",
+       "  <AnswerOption: Comp Shingle>,\n",
+       "  <AnswerOption: Concrete>,\n",
+       "  <AnswerOption: Corrugated Metal>,\n",
+       "  <AnswerOption: Elastomeric>,\n",
+       "  <AnswerOption: Flat Tile>,\n",
+       "  <AnswerOption: Foam>,\n",
+       "  <AnswerOption: Gravel>,\n",
+       "  <AnswerOption: Metal Tile>,\n",
+       "  <AnswerOption: Not Applicable (No modules on the roof)>,\n",
+       "  <AnswerOption: Rolled Asphalt>,\n",
+       "  <AnswerOption: S-Tile>,\n",
+       "  <AnswerOption: Standing Seam Metal>,\n",
+       "  <AnswerOption: TPO>,\n",
+       "  <AnswerOption: Unable To Determine>,\n",
+       "  <AnswerOption: W-Tile>,\n",
+       "  <AnswerOption: Wood shake>],\n",
+       " 'Panel Manufacturer': [<AnswerOption: Siemens/Murray/ITE/Gould/Crouse Hinds>,\n",
+       "  <AnswerOption: Square D HOM>,\n",
+       "  <AnswerOption: Square D QO>,\n",
+       "  <AnswerOption: Eaton BH/Cutler Hammer/Westinghouse>,\n",
+       "  <AnswerOption: Eaton BR/Challenger/Bryant>,\n",
+       "  <AnswerOption: General Electric/Milbank/Unicorn>,\n",
+       "  <AnswerOption: Zinsco/Sylvania>,\n",
+       "  <AnswerOption: Federal Pacific>,\n",
+       "  <AnswerOption: Not accessible>],\n",
+       " 'Main Breaker Rating': [<AnswerOption: 225A>,\n",
+       "  <AnswerOption: 400A>,\n",
+       "  <AnswerOption: 200A>,\n",
+       "  <AnswerOption: 300A>,\n",
+       "  <AnswerOption: 175A>,\n",
+       "  <AnswerOption: 250A>,\n",
+       "  <AnswerOption: 150A>,\n",
+       "  <AnswerOption: 125A>,\n",
+       "  <AnswerOption: 100A>,\n",
+       "  <AnswerOption: No Main Breaker>,\n",
+       "  <AnswerOption: Unable To Determine>],\n",
+       " 'Bus Rating': [<AnswerOption: 225A>,\n",
+       "  <AnswerOption: 200A>,\n",
+       "  <AnswerOption: 250A>,\n",
+       "  <AnswerOption: 150A>,\n",
+       "  <AnswerOption: 125A>,\n",
+       "  <AnswerOption: 100A>,\n",
+       "  <AnswerOption: No Label>,\n",
+       "  <AnswerOption: 400A>,\n",
+       "  <AnswerOption: Unable To Determine>],\n",
+       " 'Roof Pitch (Degrees)': [<AnswerOption: 5>,\n",
+       "  <AnswerOption: 9>,\n",
+       "  <AnswerOption: 14>,\n",
+       "  <AnswerOption: 18>,\n",
+       "  <AnswerOption: 22>,\n",
+       "  <AnswerOption: 26>,\n",
+       "  <AnswerOption: 30>,\n",
+       "  <AnswerOption: 33>,\n",
+       "  <AnswerOption: 37>,\n",
+       "  <AnswerOption: 40>,\n",
+       "  <AnswerOption: 42.5>,\n",
+       "  <AnswerOption: 45>,\n",
+       "  <AnswerOption: Not Applicable (No modules on the roof)>,\n",
+       "  <AnswerOption: Unable To Determine>],\n",
+       " 'Battery Capacity Types': [<AnswerOption: N/A>,\n",
+       "  <AnswerOption: Partial Backup>,\n",
+       "  <AnswerOption: Full House Backup>],\n",
+       " 'DC Wire Run/Panel Ready Info': [<AnswerOption: Weather>,\n",
+       "  <AnswerOption: Short laborers>,\n",
+       "  <AnswerOption: On jobsite issues, (design, electrical)>,\n",
+       "  <AnswerOption: Material shortage>],\n",
+       " 'All Modules Landed Info list': [<AnswerOption: Weather>,\n",
+       "  <AnswerOption: Short laborers>,\n",
+       "  <AnswerOption: Onsite fitment issues>,\n",
+       "  <AnswerOption: Material shortage>],\n",
+       " 'Ground Rods Installed list': [<AnswerOption: Blue stake not called>],\n",
+       " 'Electrical Equipment Hung L': [<AnswerOption: No electrical lead>,\n",
+       "  <AnswerOption: Material shortage (disco, meter and inverter)>,\n",
+       "  <AnswerOption: No access>],\n",
+       " 'AC Wire Run Complete List': [<AnswerOption: No electrical lead>,\n",
+       "  <AnswerOption: Pending main panel upgrade>,\n",
+       "  <AnswerOption: Material shortage (disco, meter, wire, breaker, fuses and inverter)>],\n",
+       " 'DC Wire Run to Roof J-Box List': [<AnswerOption: Short laborers>,\n",
+       "  <AnswerOption: Weather>,\n",
+       "  <AnswerOption: Time allotment on job>],\n",
+       " 'All Labels Placed List': [<AnswerOption: No electrical lead>,\n",
+       "  <AnswerOption: Incorrect labels given>],\n",
+       " 'All Strings Working List': [<AnswerOption: Ran out of daylight>,\n",
+       "  <AnswerOption: Time allotment on job>],\n",
+       " 'Monitoring Set Up Tested List': [<AnswerOption: No electrical lead>,\n",
+       "  <AnswerOption: Time allotment on job>],\n",
+       " 'Yes / No': [<AnswerOption: Yes>, <AnswerOption: No>],\n",
+       " 'Yes/No/NA': [<AnswerOption: Yes>, <AnswerOption: No>, <AnswerOption: NA>],\n",
+       " 'Yes / No / Unknown': [<AnswerOption: Yes>,\n",
+       "  <AnswerOption: No>,\n",
+       "  <AnswerOption: Unknown>]}"
       ]
      },
      "execution_count": 4,
@@ -220,9 +217,9 @@
     "answer_options['Yes/No/NA'] = ['Yes', 'No', 'NA']\n",
     "answer_options['Yes / No / Unknown'] = ['Yes', 'No', 'Unknown']\n",
     "answer_options = {\n",
-    "    k: models.AnswerOption.objects.bulk_create([\n",
-    "        models.AnswerOption(Value=vv) for vv in v\n",
-    "    ])\n",
+    "    k: [\n",
+    "        models.AnswerOption.objects.get_or_create(Value=vv)[0] for vv in v\n",
+    "    ]\n",
     "    for k, v in answer_options.items()\n",
     "}\n",
     "answer_options"
