--- a/server/upload_checklist.ipynb
+++ b/server/upload_checklist.ipynb
@@ -241,7 +241,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (52, 9)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>ChecklistTemplateName</th><th>DisplaySeqNumber</th><th>SectionName</th><th>QuestionLabel</th><th>AnswerType</th><th>For Select there would be &#x27;AnswerOption&#x27;</th><th>Example</th><th></th><th>Add sample residential install and sample site survey</th></tr><tr><td>str</td><td>i64</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>&quot;Site Survey&quot;</td><td>10</td><td>&quot;Ground&quot;</td><td>&quot;Cancelled at the Door Y/N&quot;</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Yes / No&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&quot;Site Survey&quot;</td><td>20</td><td>&quot;Ground&quot;</td><td>&quot;Home Type&quot;</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Home Style&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&quot;Site Survey&quot;</td><td>30</td><td>&quot;Roof&quot;</td><td>&quot;Was Layout Provided for Survey&quot;</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Yes / No&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&quot;Site Survey&quot;</td><td>40</td><td>&quot;Roof&quot;</td><td>&quot;Panels Proposed on Additional …</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Yes / No&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&quot;Site Survey&quot;</td><td>50</td><td>&quot;Roof&quot;</td><td>&quot;Roof Material&quot;</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Roof Material&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>&quot;Installation&quot;</td><td>480</td><td>&quot;Electrical Ground&quot;</td><td>&quot;Was A Line Side Tap Completed&quot;</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Yes / No&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&quot;Installation&quot;</td><td>490</td><td>&quot;Electrical Ground&quot;</td><td>&quot;Was A Derate Completed&quot;</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Yes / No&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&quot;Installation&quot;</td><td>500</td><td>&quot;Electrical Ground&quot;</td><td>&quot;Was A Hawaiian Tie In Complete&quot;</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Yes / No&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&quot;Installation&quot;</td><td>510</td><td>&quot;Electrical Ground&quot;</td><td>&quot;Was a Meter Collar Adaptor com…</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Yes / No&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&quot;Installation&quot;</td><td>520</td><td>&quot;Ground&quot;</td><td>&quot;Installation Date&quot;</td><td>&quot;Date&quot;</td><td>null</td><td>null</td><td>null</td><td>null</td></tr></tbody></table></div>"
+       "<small>shape: (52, 9)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>ChecklistTemplateName</th><th>DisplaySeqNumber</th><th>SectionName</th><th>QuestionLabel</th><th>AnswerType</th><th>For Select there would be &#x27;AnswerOption&#x27;</th><th>Example</th><th></th><th>Add sample residential install and sample site survey</th></tr><tr><td>str</td><td>i64</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>&quot;Residential Site Survey&quot;</td><td>10</td><td>&quot;Ground&quot;</td><td>&quot;Cancelled at the Door Y/N&quot;</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Yes / No&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&quot;Residential Site Survey&quot;</td><td>20</td><td>&quot;Ground&quot;</td><td>&quot;Home Type&quot;</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Home Style&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&quot;Residential Site Survey&quot;</td><td>30</td><td>&quot;Roof&quot;</td><td>&quot;Was Layout Provided for Survey&quot;</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Yes / No&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&quot;Residential Site Survey&quot;</td><td>40</td><td>&quot;Roof&quot;</td><td>&quot;Panels Proposed on Additional …</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Yes / No&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&quot;Residential Site Survey&quot;</td><td>50</td><td>&quot;Roof&quot;</td><td>&quot;Roof Material&quot;</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Roof Material&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>&quot;Residential Installation&quot;</td><td>480</td><td>&quot;Electrical Ground&quot;</td><td>&quot;Was A Line Side Tap Completed&quot;</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Yes / No&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&quot;Residential Installation&quot;</td><td>490</td><td>&quot;Electrical Ground&quot;</td><td>&quot;Was A Derate Completed&quot;</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Yes / No&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&quot;Residential Installation&quot;</td><td>500</td><td>&quot;Electrical Ground&quot;</td><td>&quot;Was A Hawaiian Tie In Complete&quot;</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Yes / No&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&quot;Residential Installation&quot;</td><td>510</td><td>&quot;Electrical Ground&quot;</td><td>&quot;Was a Meter Collar Adaptor com…</td><td>&quot;EnumeratedSingle&quot;</td><td>&quot;Yes / No&quot;</td><td>null</td><td>null</td><td>null</td></tr><tr><td>&quot;Residential Installation&quot;</td><td>520</td><td>&quot;Ground&quot;</td><td>&quot;Installation Date&quot;</td><td>&quot;Date&quot;</td><td>null</td><td>null</td><td>null</td><td>null</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (52, 9)\n",
@@ -253,39 +253,42 @@
        "│ str        ┆            ┆            ┆            ┆   ┆ ---        ┆         ┆      ┆ str        │\n",
        "│            ┆            ┆            ┆            ┆   ┆ str        ┆         ┆      ┆            │\n",
        "╞════════════╪════════════╪════════════╪════════════╪═══╪════════════╪═════════╪══════╪════════════╡\n",
-       "│ Site       ┆ 10         ┆ Ground     ┆ Cancelled  ┆ … ┆ Yes / No   ┆ null    ┆ null ┆ null       │\n",
-       "│ Survey     ┆            ┆            ┆ at the     ┆   ┆            ┆         ┆      ┆            │\n",
-       "│            ┆            ┆            ┆ Door Y/N   ┆   ┆            ┆         ┆      ┆            │\n",
-       "│ Site       ┆ 20         ┆ Ground     ┆ Home Type  ┆ … ┆ Home Style ┆ null    ┆ null ┆ null       │\n",
+       "│ Residentia ┆ 10         ┆ Ground     ┆ Cancelled  ┆ … ┆ Yes / No   ┆ null    ┆ null ┆ null       │\n",
+       "│ l Site     ┆            ┆            ┆ at the     ┆   ┆            ┆         ┆      ┆            │\n",
+       "│ Survey     ┆            ┆            ┆ Door Y/N   ┆   ┆            ┆         ┆      ┆            │\n",
+       "│ Residentia ┆ 20         ┆ Ground     ┆ Home Type  ┆ … ┆ Home Style ┆ null    ┆ null ┆ null       │\n",
+       "│ l Site     ┆            ┆            ┆            ┆   ┆            ┆         ┆      ┆            │\n",
        "│ Survey     ┆            ┆            ┆            ┆   ┆            ┆         ┆      ┆            │\n",
-       "│ Site       ┆ 30         ┆ Roof       ┆ Was Layout ┆ … ┆ Yes / No   ┆ null    ┆ null ┆ null       │\n",
-       "│ Survey     ┆            ┆            ┆ Provided   ┆   ┆            ┆         ┆      ┆            │\n",
-       "│            ┆            ┆            ┆ for Survey ┆   ┆            ┆         ┆      ┆            │\n",
-       "│ Site       ┆ 40         ┆ Roof       ┆ Panels     ┆ … ┆ Yes / No   ┆ null    ┆ null ┆ null       │\n",
-       "│ Survey     ┆            ┆            ┆ Proposed   ┆   ┆            ┆         ┆      ┆            │\n",
-       "│            ┆            ┆            ┆ on         ┆   ┆            ┆         ┆      ┆            │\n",
+       "│ Residentia ┆ 30         ┆ Roof       ┆ Was Layout ┆ … ┆ Yes / No   ┆ null    ┆ null ┆ null       │\n",
+       "│ l Site     ┆            ┆            ┆ Provided   ┆   ┆            ┆         ┆      ┆            │\n",
+       "│ Survey     ┆            ┆            ┆ for Survey ┆   ┆            ┆         ┆      ┆            │\n",
+       "│ Residentia ┆ 40         ┆ Roof       ┆ Panels     ┆ … ┆ Yes / No   ┆ null    ┆ null ┆ null       │\n",
+       "│ l Site     ┆            ┆            ┆ Proposed   ┆   ┆            ┆         ┆      ┆            │\n",
+       "│ Survey     ┆            ┆            ┆ on         ┆   ┆            ┆         ┆      ┆            │\n",
        "│            ┆            ┆            ┆ Additional ┆   ┆            ┆         ┆      ┆            │\n",
        "│            ┆            ┆            ┆ …          ┆   ┆            ┆         ┆      ┆            │\n",
-       "│ Site       ┆ 50         ┆ Roof       ┆ Roof       ┆ … ┆ Roof       ┆ null    ┆ null ┆ null       │\n",
-       "│ Survey     ┆            ┆            ┆ Material   ┆   ┆ Material   ┆         ┆      ┆            │\n",
+       "│ Residentia ┆ 50         ┆ Roof       ┆ Roof       ┆ … ┆ Roof       ┆ null    ┆ null ┆ null       │\n",
+       "│ l Site     ┆            ┆            ┆ Material   ┆   ┆ Material   ┆         ┆      ┆            │\n",
+       "│ Survey     ┆            ┆            ┆            ┆   ┆            ┆         ┆      ┆            │\n",
        "│ …          ┆ …          ┆ …          ┆ …          ┆ … ┆ …          ┆ …       ┆ …    ┆ …          │\n",
-       "│ Installati ┆ 480        ┆ Electrical ┆ Was A Line ┆ … ┆ Yes / No   ┆ null    ┆ null ┆ null       │\n",
-       "│ on         ┆            ┆ Ground     ┆ Side Tap   ┆   ┆            ┆         ┆      ┆            │\n",
-       "│            ┆            ┆            ┆ Completed  ┆   ┆            ┆         ┆      ┆            │\n",
-       "│ Installati ┆ 490        ┆ Electrical ┆ Was A      ┆ … ┆ Yes / No   ┆ null    ┆ null ┆ null       │\n",
-       "│ on         ┆            ┆ Ground     ┆ Derate     ┆   ┆            ┆         ┆      ┆            │\n",
-       "│            ┆            ┆            ┆ Completed  ┆   ┆            ┆         ┆      ┆            │\n",
-       "│ Installati ┆ 500        ┆ Electrical ┆ Was A      ┆ … ┆ Yes / No   ┆ null    ┆ null ┆ null       │\n",
-       "│ on         ┆            ┆ Ground     ┆ Hawaiian   ┆   ┆            ┆         ┆      ┆            │\n",
-       "│            ┆            ┆            ┆ Tie In     ┆   ┆            ┆         ┆      ┆            │\n",
+       "│ Residentia ┆ 480        ┆ Electrical ┆ Was A Line ┆ … ┆ Yes / No   ┆ null    ┆ null ┆ null       │\n",
+       "│ l Installa ┆            ┆ Ground     ┆ Side Tap   ┆   ┆            ┆         ┆      ┆            │\n",
+       "│ tion       ┆            ┆            ┆ Completed  ┆   ┆            ┆         ┆      ┆            │\n",
+       "│ Residentia ┆ 490        ┆ Electrical ┆ Was A      ┆ … ┆ Yes / No   ┆ null    ┆ null ┆ null       │\n",
+       "│ l Installa ┆            ┆ Ground     ┆ Derate     ┆   ┆            ┆         ┆      ┆            │\n",
+       "│ tion       ┆            ┆            ┆ Completed  ┆   ┆            ┆         ┆      ┆            │\n",
+       "│ Residentia ┆ 500        ┆ Electrical ┆ Was A      ┆ … ┆ Yes / No   ┆ null    ┆ null ┆ null       │\n",
+       "│ l Installa ┆            ┆ Ground     ┆ Hawaiian   ┆   ┆            ┆         ┆      ┆            │\n",
+       "│ tion       ┆            ┆            ┆ Tie In     ┆   ┆            ┆         ┆      ┆            │\n",
        "│            ┆            ┆            ┆ Complete   ┆   ┆            ┆         ┆      ┆            │\n",
-       "│ Installati ┆ 510        ┆ Electrical ┆ Was a      ┆ … ┆ Yes / No   ┆ null    ┆ null ┆ null       │\n",
-       "│ on         ┆            ┆ Ground     ┆ Meter      ┆   ┆            ┆         ┆      ┆            │\n",
-       "│            ┆            ┆            ┆ Collar     ┆   ┆            ┆         ┆      ┆            │\n",
+       "│ Residentia ┆ 510        ┆ Electrical ┆ Was a      ┆ … ┆ Yes / No   ┆ null    ┆ null ┆ null       │\n",
+       "│ l Installa ┆            ┆ Ground     ┆ Meter      ┆   ┆            ┆         ┆      ┆            │\n",
+       "│ tion       ┆            ┆            ┆ Collar     ┆   ┆            ┆         ┆      ┆            │\n",
        "│            ┆            ┆            ┆ Adaptor    ┆   ┆            ┆         ┆      ┆            │\n",
        "│            ┆            ┆            ┆ com…       ┆   ┆            ┆         ┆      ┆            │\n",
-       "│ Installati ┆ 520        ┆ Ground     ┆ Installati ┆ … ┆ null       ┆ null    ┆ null ┆ null       │\n",
-       "│ on         ┆            ┆            ┆ on Date    ┆   ┆            ┆         ┆      ┆            │\n",
+       "│ Residentia ┆ 520        ┆ Ground     ┆ Installati ┆ … ┆ null       ┆ null    ┆ null ┆ null       │\n",
+       "│ l Installa ┆            ┆            ┆ on Date    ┆   ┆            ┆         ┆      ┆            │\n",
+       "│ tion       ┆            ┆            ┆            ┆   ┆            ┆         ┆      ┆            │\n",
        "└────────────┴────────────┴────────────┴────────────┴───┴────────────┴─────────┴──────┴────────────┘"
       ]
      },
@@ -321,21 +324,9 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<ChecklistTemplate: ChecklistTemplate object (1)>,\n",
-       " <ChecklistTemplate: ChecklistTemplate object (2)>]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "models.ChecklistTemplate.objects.bulk_create([\n",
+    "checklist_template_rows = models.ChecklistTemplate.objects.bulk_create([\n",
     "    models.ChecklistTemplate(\n",
     "        ChecklistTemplateName_Value=name,\n",
     "        ChecklistTemplateMaintainer=maintainer,\n",
@@ -353,7 +344,7 @@
    },
    "outputs": [],
    "source": [
-    "checklist_template_rows = models.ChecklistTemplate.objects.all()\n",
+    "# checklist_template_rows = models.ChecklistTemplate.objects.all()\n",
     "for template in checklist_template_rows:\n",
     "    questions = checklist_templates.filter(ChecklistTemplateName=template.ChecklistTemplateName_Value)\n",
     "    question_rows = []\n",
