update answer options

--- a/server/checklist_upserts/EcogyEnergy/upsert.ipynb
+++ b/server/checklist_upserts/EcogyEnergy/upsert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "1b65f4af-e8b1-4e01-9989-26b115f2388c",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "916aafd6-74d5-4d3e-a490-642f79708210",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "37c0e53d-9c12-4c0e-8115-e70a2897cc60",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "d51f3613-cb98-40a2-8e44-352b9e4d13dd",
    "metadata": {
     "scrolled": true
@@ -66,10 +66,10 @@
     {
      "data": {
       "text/plain": [
-       "'maintainer=<ChecklistTemplateMaintainer: ChecklistTemplateMaintainer object (2)>, was_created=False'"
+       "'maintainer=<ChecklistTemplateMaintainer: ChecklistTemplateMaintainer object (2)>, was_created=True'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "b7f76fce-e3b0-4334-8048-5022a734f06c",
    "metadata": {
     "scrolled": true
@@ -111,14 +111,14 @@
    ],
    "source": [
     "answer_option_groups = {\n",
-    "    'Completed?': ['', 'Completed']\n",
+    "    'Completed?': ['Not Completed', 'Completed']\n",
     "}\n",
     "pprint.pp(answer_option_groups, compact=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "ded4e199-6fbb-44d4-b48f-c04cfb5f16f3",
    "metadata": {
     "scrolled": true
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "ba79fbcb-3e36-42c9-820b-57f182c96fc8",
    "metadata": {
     "scrolled": true
@@ -189,7 +189,7 @@
        "└─────────────────────────────┴─────────────────────────┴─────────────────────────────────┘"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "3c96dc53-3238-4981-983b-7eda441ef6f3",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "7902757e-98c0-43ee-873e-37cbf7b9b33a",
    "metadata": {
     "scrolled": true
@@ -306,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.14.3"
   }
  },
  "nbformat": 4,
