update EcogyEnergy to Ecosuite.io

--- a/server/checklist_upserts/EcogyEnergy/upsert.ipynb
+++ b/server/checklist_upserts/EcogyEnergy/upsert.ipynb
@@ -76,9 +76,9 @@
    ],
    "source": [
     "maintainer, was_created = models.ChecklistTemplateMaintainer.objects.update_or_create(\n",
-    "    URL_Value='https://ecogyenergy.com',\n",
+    "    URL_Value='https://ecosuite.io',\n",
     "    WorkPhone_Value='(718) 304-0945',\n",
-    "    ChecklistTemplateMaintainerName_Value='Ecogy Energy',\n",
+    "    ChecklistTemplateMaintainerName_Value='Ecosuite.io',\n",
     ")\n",
     "f'{maintainer=}, {was_created=}'\n",
     "# maintainer.save()"
@@ -111,7 +111,7 @@
    ],
    "source": [
     "answer_option_groups = {\n",
-    "    'Completed?': ['Not Completed', 'Completed']\n",
+    "    'Completed?': ['In Progress', 'Completed']\n",
     "}\n",
     "pprint.pp(answer_option_groups, compact=True)"
    ]
